fix issue with description alignment

--- a/assets/css/socicon.css
+++ b/assets/css/socicon.css
@@ -1190,15 +1190,15 @@
     padding: 0;
 }
 
-.zoom-social-icons-widget .zoom-social-icons-list.zoom-social-icons-list--align-left {
+.zoom-social-icons-widget .zoom-social-icons-list--align-left {
     text-align: left;
 }
 
-.zoom-social-icons-widget .zoom-social-icons-list.zoom-social-icons-list--align-right {
+.zoom-social-icons-widget .zoom-social-icons-list--align-right {
     text-align: right;
 }
 
-.zoom-social-icons-widget .zoom-social-icons-list.zoom-social-icons-list--align-center {
+.zoom-social-icons-widget .zoom-social-icons-list--align-center {
     text-align: center;
 }
 
